--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   ],
   "license": "ISC",
   "author": "Deep",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
