--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5"
   }
 }
