--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.3",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.1"
   }
